--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </a>
 
   <!-- WhatsApp -->
-  <a href="https://wa.me/+996990650988" target="_blank"
+  <a href="https://wa.me/996990650988" target="_blank"
      style="position: relative; display: flex; align-items: center; justify-content: center; width: 300px; padding: 26px 16px; border: 1.5px solid #ccc; border-radius: 8px;
     text-decoration: none; color: #1B0946; background-color: #fff; font-size: 24px; font-weight: bold;">
     <img src="free-icon-whatsapp-4423697.png" alt="WhatsApp"
