--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Gmail -->
   <a href="mailto:ottoaksesuar.kg@gmail.com" target="_blank"
      style="position: relative; display: flex; align-items: center; justify-content: center; width: 300px; padding: 26px 16px; border: 1.5px solid #ccc; border-radius: 8px;
-    text-decoration: none; color: #1B0946; background-color: #fff; font-size: 24px; font-weight: bold;">
+    text-decoration: none; color: black; background-color: #fff; font-size: 24px; font-weight: bold;">
     <img src="https://img.icons8.com/color/48/000000/gmail-new.png" alt="Gmail"
          style="position: absolute; left: 12px; width: 44px;">
     Gmail
@@ -26,7 +26,7 @@
   <!-- WhatsApp -->
   <a href="https://wa.me/996990650988" target="_blank"
      style="position: relative; display: flex; align-items: center; justify-content: center; width: 300px; padding: 26px 16px; border: 1.5px solid #ccc; border-radius: 8px;
-    text-decoration: none; color: #1B0946; background-color: #fff; font-size: 24px; font-weight: bold;">
+    text-decoration: none; color: black; background-color: #fff; font-size: 24px; font-weight: bold;">
     <img src="free-icon-whatsapp-4423697.png" alt="WhatsApp"
          style="position: absolute; left: 12px; width: 44px;">
     WhatsApp
@@ -35,7 +35,7 @@
   <!-- Instagram -->
   <a href="https://www.instagram.com/ottoaksesuar.kg/" target="_blank"
      style="position: relative; display: flex; align-items: center; justify-content: center; width: 300px; padding: 26px 16px; border: 1.5px solid #ccc; border-radius: 8px;
-    text-decoration: none; color: #1B0946; background-color: #fff; font-size: 24px; font-weight: bold;">
+    text-decoration: none; color: black; background-color: #fff; font-size: 24px; font-weight: bold;">
     <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram"
          style="position: absolute; left: 12px; width: 44px;">
     Instagram
@@ -44,7 +44,7 @@
   <!-- Telegram -->
   <a href="https://t.me/+996990650988" target="_blank"
      style="position: relative; display: flex; align-items: center; justify-content: center; width: 300px; padding: 26px 16px; border: 1.5px solid #ccc; border-radius: 8px;
-    text-decoration: none; color: #1B0946; background-color: #fff; font-size: 24px; font-weight: bold;">
+    text-decoration: none; color: black; background-color: #fff; font-size: 24px; font-weight: bold;">
     <img src="https://img.icons8.com/color/48/000000/telegram-app.png" alt="Telegram"
          style="position: absolute; left: 12px; width: 44px;">
     Telegram
